--- a/ejercicio3.ipynb
+++ b/ejercicio3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "        for letra in palabra:\n",
     "            if (char == letra):\n",
     "                print(palabra)\n",
-    "                break      \n",
+    "                break \n",
+    "             \n",
     "            \n"
    ]
   },
@@ -58,45 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jupyterlab\n",
-      "a\n",
-      "web-based\n",
-      "interactive\n",
-      "and\n",
-      "data.\n",
-      "jupyterlab\n",
-      "and\n",
-      "arrange\n",
-      "interface\n",
-      "a\n",
-      "wide\n",
-      "range\n",
-      "data\n",
-      "and\n",
-      "machine\n",
-      "learning.\n",
-      "jupyterlab\n",
-      "and\n",
-      "modular:\n",
-      "that\n",
-      "add\n",
-      "new\n",
-      "and\n",
-      "integrate\n"
+      "Error , no ingreso una letra\n"
      ]
     }
    ],
    "source": [
     "char = input('ingrese una letra ')\n",
     "char = char.lower()\n",
-    "if (len(char) == 1) and (char >= 'a') and (char<='z'):\n",
+    "if (len(char) == 1) and ('a'<= char<='z'):\n",
     "    imprimir(char)\n",
     "else:\n",
     "    print('Error , no ingreso una letra')"
